# slint_xiaozhi_gui

./: Cargo.toml  Cross.toml  README.md  cross_build.sh
.cargo/: config.toml
src/: main.rs
ui/: main.slint
