[package]
name = "slint_xiaozhi_gui"
version = "0.1.0"
edition = "2024"

[features]
default = []
embedded = ["slint/backend-linuxkms-noseat", "slint/renderer-software"]

[dependencies]
slint = "1.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.9"
